# sys-metric

./: .gitignore  Cargo.toml  README.md
src/: main.rs  timeConvert.rs
ui/: app-window.slint  info-card.slint  info-card2.slint  mectric-card.slint  process-item.slint
