[package]
name = "Sys-metric"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "A simple System performance monitering desktop tool."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfxinfo = { version = "0.1.2", features = ["gpu_info"] }
slint = "1.13.1"
sysinfo = "0.37.1"

[build-dependencies]
slint-build = "1.13.1"


[package.metadata.bundle]
name = "Sys-metric"
identifier = "io.github.04Nightmare.sys-metric"
